--- a/app/static/css/main.less
+++ b/app/static/css/main.less
@@ -11,3 +11,36 @@
 /* Apply custom highlight */
 ::-moz-selection{ .custom-highlight; }
 ::selection { .custom-highlight; }
+
+
+#main_ {
+	margin: 10%;
+}
+
+#left {
+	float: left;
+}
+
+#right {
+	clear: right;
+}
+
+#photo {
+	border: solid 2px blue;
+	width: 200px;
+	height: 200px;	
+}
+
+img {
+	width: 196px;
+	height: 196px;
+}
+
+#right > div {
+	margin-left: 205px;
+	margin-right: 605px;
+	margin-bottom: 8px;
+	padding: 5px;
+	border: solid 2px;
+}
+
