--- a/app/templates/profile_view.html
+++ b/app/templates/profile_view.html
@@ -9,16 +9,16 @@
 <div>
 	<div id="main_">
 		<div id="left">
-			<div id="photo"><img src="http://autotrucksnews.com/wp-content/uploads/2015/07/peterbilt-320-for-sale-LTaP.jpg">
+			<div id="photo"><img src="{{ url_for('uploaded_file', filename=profile.image) }}">
 			</div>
 		</div>
 		<div id="right">
-			<div id="name">Craig McLaren</div>
+			<div id="name">{{ profile.firstname }} {{ profile.lastname }}</div>
 			<div id="date">Today is: {{ date }}</div>
 			<div id="info">
-				Username: madman </br>
-				ID: 607009221 </br>
-				Sex: Male </br>
+				Username: {{ username }} </br>
+				ID: {{ profile.userid }} </br>
+				Sex: {{ profile.sex }} </br>
 				Highest Score: 150 </br>
 				TDollars: 215 </br>
 			</div>
