--- a/app/static/css/main.less
+++ b/app/static/css/main.less
@@ -27,20 +27,50 @@
 
 #photo {
 	border: solid 2px blue;
-	width: 200px;
-	height: 200px;	
+	width: 196px;
+	height: 148px;	
 }
 
 img {
-	width: 196px;
-	height: 196px;
+	width: 192px;
+	height: 144px;
 }
 
 #right > div {
-	margin-left: 205px;
+	margin-left: 201px;
 	margin-right: 605px;
-	margin-bottom: 8px;
+	margin-bottom: 5px;
 	padding: 5px;
 	border: solid 2px;
 }
 
+/* Message flashing */
+.flash {
+  background-color: #FBB0B0;
+  padding: 10px;
+  width: 400px;
+}
+#image {
+	float: right;
+	margin-right: 775px;
+}
+
+#sex {
+	margin-left: 83px;
+}
+
+#age {
+	margin-left: 83px;
+}
+
+#firstname {
+	margin-left: 42px;
+}
+
+#lastname {
+	margin-left: 43px;
+}
+
+#create {
+	margin-left: 111px;
+}
