--- a/app/templates/profile_view.html
+++ b/app/templates/profile_view.html
@@ -14,7 +14,7 @@
 		</div>
 		<div id="right">
 			<div id="name">{{ profile.firstname }} {{ profile.lastname }}</div>
-			<div id="date">Profile Added On: {{ profile.date }}</div>
+			<div id="date">Profile Added On: {{ profile.added }}</div>
 			<div id="info">
 				Username: {{ username }} </br>
 				ID: {{ profile.userid }} </br>
